--- a/devidea/build.gradle
+++ b/devidea/build.gradle
@@ -17,7 +17,7 @@ configurations {
 repositories {
     mavenCentral()
 }
-
+apply plugin: "io.spring.dependency-management"
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
@@ -27,7 +27,16 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    compile 'org.projectlombok:lombok'
+    implementation group: 'com.querydsl', name: 'querydsl-jpa', version: '4.4.0'
+    implementation group: 'com.querydsl', name: 'querydsl-core', version: '4.4.0'
+    implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.4.0'
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.9'
+    compile('org.projectlombok:lombok')
+    compile("com.querydsl:querydsl-core") // querydsl
+    compile("com.querydsl:querydsl-jpa") // querydsl
+    annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
+    annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+    annotationProcessor("jakarta.annotation:jakarta.annotation-api")
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
@@ -38,6 +47,18 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 }
 
+def generated='src/main/generated'
+sourceSets {
+    main.java.srcDirs += [ generated ]
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+}
+
+clean.doLast {
+    file(generated).deleteDir()
+}
 test {
     useJUnitPlatform()
 }
