--- a/devidea/build.gradle
+++ b/devidea/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation group: 'com.querydsl', name: 'querydsl-core', version: '4.4.0'
     implementation group: 'com.querydsl', name: 'querydsl-apt', version: '4.4.0'
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.9'
+    implementation group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.1.6'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile('org.projectlombok:lombok')
     compile("com.querydsl:querydsl-core") // querydsl
     compile("com.querydsl:querydsl-jpa") // querydsl
