--- a/devidea/Dockerfile
+++ b/devidea/Dockerfile
@@ -1,6 +1,8 @@
 FROM adoptopenjdk/openjdk11
 
-ARG JAR_FILE=build/libs/devidea*.jar
+ARG JAR_FILE=build/libs/devidea-0.0.1-SNAPSHOT.jar
+
+EXPOSE 8080
 
 # 별칭
 ADD ${JAR_FILE} devidea.jar
