--- a/devidea/build.gradle
+++ b/devidea/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 apply plugin: "io.spring.dependency-management"
 dependencies {
+    implementation 'org.mapstruct:mapstruct:1.4.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
