--- a/appspec.yml
+++ b/appspec.yml
@@ -5,5 +5,5 @@ files:
     destination: /home/ec2-user/app/project
 hooks:
   AfterInstall: #배포가 끝나면 아래 명령어를 실행
-    - location: execute-deploy.sh
+    - location: deploy.sh
       timeout: 180
