--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,6 @@ files:
   - source:  /
     destination: /home/ec2-user/app/project
 hooks:
-  ApplicationStart: #배포가 끝나면 아래 명령어를 실행
-    - location: scripts/execute-deploy.sh
+  AfterInstall: #배포가 끝나면 아래 명령어를 실행
+    - location: execute_deploy.sh
       timeout: 180
