--- a/appspec.yml
+++ b/appspec.yml
@@ -4,8 +4,6 @@ files:
   - source:  /
     destination: /home/ec2-user/app/project
 hooks:
-  BeforeInstall:
-    - location: scripts/remove-before.sh
-  ApplicationStart: #배포가 끝나면 아래 명령어를 실행
-    - location: scripts/execute-deploy.sh
+  AfterInstall: #배포가 끝나면 아래 명령어를 실행
+    - location: execute-deploy.sh
       timeout: 180
