--- a/devidea/build.gradle
+++ b/devidea/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.1.6'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    implementation 'junit:junit:4.12'
     compile('org.projectlombok:lombok')
     compile("com.querydsl:querydsl-core") // querydsl
     compile("com.querydsl:querydsl-jpa") // querydsl
@@ -42,7 +43,9 @@ dependencies {
     annotationProcessor("jakarta.annotation:jakarta.annotation-api")
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
-    compileOnly 'org.projectlombok:lombok'
+    // compileOnly 'org.projectlombok:lombok'
+    testCompile "org.projectlombok:lombok"
+    testAnnotationProcessor('org.projectlombok:lombok')
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
