--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ configurations {
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 apply plugin: "io.spring.dependency-management"
 dependencies {
@@ -48,6 +49,15 @@ dependencies {
     annotationProcessor("jakarta.annotation:jakarta.annotation-api")
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    implementation group: 'com.github.kingbbode', name: 'spring-boot-ehcache-monitor', version: '1.1'
+    implementation group: 'com.vaadin', name: 'vaadin-spring-boot-starter', version: '19.0.2'
+    //2차cache
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation group: 'javax.cache', name: 'cache-api', version: '1.1.1'
+    implementation group: 'org.hibernate', name: 'hibernate-jcache', version: '5.4.19.Final'
+    implementation group: 'org.ehcache', name: 'ehcache', version: '3.8.1'
+
+    //
     // compileOnly 'org.projectlombok:lombok'
     testCompile "org.projectlombok:lombok"
     testAnnotationProcessor('org.projectlombok:lombok')
@@ -82,4 +92,9 @@ clean.doLast {
 }
 test {
     useJUnitPlatform()
+}
+dependencyManagement {
+    imports {
+        mavenBom "com.vaadin:vaadin-bom:8.1.0"
+    }
 }
