--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ apply plugin: "io.spring.dependency-management"
 dependencies {
     implementation 'org.mapstruct:mapstruct:1.4.1.Final'
     implementation group: 'org.springframework.boot', name: 'spring-boot-actuator', version: '2.4.3'
-    implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-server', version: '2.4.0'
-    implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.4.0'
+//    implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-server', version: '2.4.0'
+//    implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.4.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -49,8 +49,6 @@ dependencies {
     annotationProcessor("jakarta.annotation:jakarta.annotation-api")
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
-    implementation group: 'com.github.kingbbode', name: 'spring-boot-ehcache-monitor', version: '1.1'
-    implementation group: 'com.vaadin', name: 'vaadin-spring-boot-starter', version: '19.0.2'
     //2차cache
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation group: 'javax.cache', name: 'cache-api', version: '1.1.1'
