--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,20 +31,20 @@ spring:
       host: mongodb2
       port: 27017
       database: test
-#  h2:
-#    console:
-#      enabled: true
-#      path: /h2-console
-#  datasource:
-#    url: jdbc:h2:mem:testdb
-#    platform: h2
-#    username: sa
-#    password:
-#    driverClassName: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  datasource:
+    url: jdbc:h2:mem:testdb
+    platform: h2
+    username: sa
+    password:
+    driverClassName: org.h2.Driver
 
   jpa:
-#    database-platform: org.hibernate.dialect.H2Dialect
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       use-new-id-generator-mappings: true
       ddl-auto: create-drop
@@ -53,8 +53,8 @@ spring:
         cache:
           use_second_level_cache: true
           use_query_cache: true
-#        dialect: org.hibernate.dialect.H2Dialect
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.H2Dialect
+#        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
         show_sql: true
         default_batch_fetch_size: 1000
@@ -90,8 +90,8 @@ crawling:
 #spring.datasource.username: root
 #spring.datasource.password: root
 
-spring.datasource:
-  driverclassname: org.postgresql.Driver
-  url: jdbc:postgresql://localhost:5432/testdb?serverTimezone=UTC&characterEncoding=UTF-8
-  username: postgres
-  password:
+#spring.datasource:
+#  driverclassname: org.postgresql.Driver
+#  url: jdbc:postgresql://localhost:5432/testdb?serverTimezone=UTC&characterEncoding=UTF-8
+#  username: postgres
+#  password:
